part3/3.02/manifests/log-output/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: log-output
  namespace: pingpong-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: writer
          image: pedrocoelhodr/log-output:writer-1.7
          ports:
            - containerPort: 3001

        - name: reader
          image: pedrocoelhodr/log-output:reader-1.8
          ports:
            - containerPort: 3002

          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: config-volume

          configMap:
            name: log-output-configmap
            items:
              - key: information.txt
                path: information.txt
