part3/3.02/manifests/log-output/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: pingpong-log
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - name: reader
      port: 3002
      targetPort: 3002
    - name: writer
      port: 3001
      targetPort: 3001
