part3/3.02/manifests/log-output/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: pingpong-log
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-svc 
                port:
                  name: reader  
          - path: /log
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  name: reader
